<?xml version="1.0" encoding="utf-8"?>
	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background = "@drawable/background" 
    
    >

		<LinearLayout
		    android:id="@+id/l1"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >

			<TextView
			    android:id="@+id/textView1"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center"
			    android:text="@string/gi1"
			    android:textAppearance="?android:attr/textAppearanceLarge"
			    android:textColor="#FCCA03"
			    android:textSize="55sp"
			    android:textStyle="bold|italic" />

			<TextView
			    android:id="@+id/textView2"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center"
			    android:text="@string/gi2"
			    android:textAppearance="?android:attr/textAppearanceLarge"
			    android:textColor="#FA0000"
			    android:textSize="25sp"
			    android:textStyle="italic" />

			    <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:layout_marginTop="25dp"
                android:background="#00000000"/>

			    	<TextView
			    	    android:id="@+id/textView3"
			    	    android:layout_width="wrap_content"
			    	    android:layout_height="wrap_content"
			    	    android:layout_gravity="center"
			    	    android:layout_marginLeft="15sp"
			    	    android:layout_marginRight="15sp"
			    	    android:text="@string/gi3"
			    	    android:textAppearance="?android:attr/textAppearanceLarge"
			    	    android:textColor="#FCFCFC"
			    	    android:textSize="20sp" />

			    		    <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:layout_marginTop="15dp"
                android:background="#00000000"/>

		    	<TextView
		    	    android:id="@+id/textView4"
		    	    android:layout_width="wrap_content"
		    	    android:layout_height="wrap_content"
		    	    android:layout_gravity="center"
		    	    android:layout_marginLeft="15sp"
		    	    android:layout_marginRight="15sp"
		    	    android:text="@string/gi4"
		    	    android:textAppearance="?android:attr/textAppearanceLarge"
		    	    android:textColor="#FCFCFC"
		    	    android:textSize="20sp" />

		    			    <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:layout_marginTop="15dp"
                android:background="#00000000"/>

		    	<TextView
		    	    android:id="@+id/textView5"
		    	    android:layout_width="wrap_content"
		    	    android:layout_height="wrap_content"
		    	    android:layout_gravity="center"
		    	    android:layout_marginLeft="15sp"
		    	    android:layout_marginRight="15sp"
		    	    android:text="@string/gi5"
		    	    android:textAppearance="?android:attr/textAppearanceLarge"
		    	    android:textColor="#FCFCFC"
		    	    android:textSize="20sp" />

		    			    <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:layout_marginTop="15dp"
                android:background="#00000000"/>

		    	<TextView
		    	    android:id="@+id/textView6"
		    	    android:layout_width="wrap_content"
		    	    android:layout_height="wrap_content"
		    	    android:layout_gravity="center"
		    	    android:layout_marginLeft="15sp"
		    	    android:layout_marginRight="15sp"
		    	    android:text="@string/gi6"
		    	    android:textAppearance="?android:attr/textAppearanceLarge"
		    	    android:textColor="#FCFCFC"
		    	    android:textSize="20sp" />

		    			    <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:layout_marginTop="15dp"
                android:background="#00000000"/>

		    	<TextView
		    	    android:id="@+id/textView7"
		    	    android:layout_width="wrap_content"
		    	    android:layout_height="wrap_content"
		    	    android:layout_gravity="center"
		    	    android:layout_marginLeft="15sp"
		    	    android:layout_marginRight="15sp"
		    	    android:text="@string/gi7"
		    	    android:textAppearance="?android:attr/textAppearanceLarge"
		    	    android:textColor="#FCFCFC"
		    	    android:textSize="20sp" />

		    			    <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:layout_marginTop="15dp"
                android:background="#00000000"/>

		    	<TextView
		    	    android:id="@+id/textView8"
		    	    android:layout_width="wrap_content"
		    	    android:layout_height="wrap_content"
		    	    android:layout_gravity="center"
		    	    android:layout_marginLeft="15sp"
		    	    android:layout_marginRight="15sp"
		    	    android:text="@string/gi8"
		    	    android:textAppearance="?android:attr/textAppearanceLarge"
		    	    android:textColor="#FCFCFC"
		    	    android:textSize="20sp" />

		    			    <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:layout_marginTop="15dp"
                android:background="#00000000"/>

		    	<TextView
		    	    android:id="@+id/textView9"
		    	    android:layout_width="wrap_content"
		    	    android:layout_height="wrap_content"
		    	    android:layout_gravity="center"
		    	    android:layout_marginLeft="15sp"
		    	    android:layout_marginRight="15sp"
		    	    android:text="@string/gi9"
		    	    android:textAppearance="?android:attr/textAppearanceLarge"
		    	    android:textColor="#FCFCFC"
		    	    android:textSize="20sp" />

		    			    <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:layout_marginTop="15dp"
                android:background="#00000000"/>

		    	<TextView
		    	    android:id="@+id/textView10"
		    	    android:layout_width="wrap_content"
		    	    android:layout_height="wrap_content"
		    	    android:layout_gravity="center"
		    	    android:layout_marginLeft="15sp"
		    	    android:layout_marginRight="15sp"
		    	    android:text="@string/gi10"
		    	    android:textAppearance="?android:attr/textAppearanceLarge"
		    	    android:textColor="#FCFCFC"
		    	    android:textSize="20sp" />

		    			    <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:layout_marginTop="15dp"
                android:background="#00000000"/>

		    	<TextView
		    	    android:id="@+id/textView11"
		    	    android:layout_width="wrap_content"
		    	    android:layout_height="wrap_content"
		    	    android:layout_gravity="center"
		    	    android:layout_marginLeft="15sp"
		    	    android:layout_marginRight="15sp"
		    	    android:text="@string/gi11"
		    	    android:textAppearance="?android:attr/textAppearanceLarge"
		    	    android:textColor="#FCFCFC"
		    	    android:textSize="20sp" />

		    				    <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:layout_marginTop="55dp"
                android:background="#00000000"/>
		  
		    
		</LinearLayout>
	    
	    </ScrollView>