<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rel"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center" >

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:fillViewport="true"
        tools:ignore="UselessParent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
              <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:layout_marginTop="10dp"
                android:background="#00000000"/>
            
              <TextView
                  android:id="@+id/textView1"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:text="@string/e1"
                  android:textColor="#FC0000"
                  android:textSize="30sp" />
                <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:layout_marginTop="15dp"
                android:background="#00000000"/>
		    
		     <Button
                android:id="@+id/button17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/i"
                android:text="@string/el1" 
                android:textColor="#FCCA03"
                android:textSize="20sp"
                />
                <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:layout_marginTop="7dp"
                android:background="#00000000"/>
                 <Button
                android:id="@+id/button18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/i"
                android:text="@string/el2" 
                android:textColor="#FCCA03"
                android:textSize="20sp"
                />
                <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:layout_marginTop="7dp"
                android:background="#00000000"/>
                 <Button
                android:id="@+id/button19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/i"
                android:text="@string/el3" 
                android:textColor="#FCCA03"
                android:textSize="20sp"
                />
                <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:layout_marginTop="7dp"
                android:background="#00000000"/>
                 <Button
                android:id="@+id/button20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/i"
                android:text="@string/el4" 
                android:textColor="#FCCA03"
                android:textSize="20sp"
                />
                <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:layout_marginTop="7dp"
                android:background="#00000000"/>
                 <Button
                android:id="@+id/button21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/i"
                android:text="@string/el5" 
                android:textColor="#FCCA03"
                android:textSize="20sp"
                />
                <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:layout_marginTop="7dp"
                android:background="#00000000"/>
                 <Button
                android:id="@+id/button22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/i"
                android:text="@string/el6" 
                android:textColor="#FCCA03"
                android:textSize="20sp"
                />
                <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:layout_marginTop="7dp"
                android:background="#00000000"/>
                 <Button
                android:id="@+id/button23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/i"
                android:text="@string/el7" 
                android:textColor="#FCCA03"
                android:textSize="20sp"
                />
                <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:layout_marginTop="35dp"
                android:background="#00000000"/>
		       
		    
		    
		    
		    
		    
		    
		    
		    
		    
	   </LinearLayout>
    </ScrollView>

</RelativeLayout>