<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rel"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center" >

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:fillViewport="true"
        tools:ignore="UselessParent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

           <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:layout_marginTop="10dp"
                android:background="#00000000"/>
            
              <TextView
                  android:id="@+id/textView1"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:text="@string/e4"
                  android:textColor="#FC0000"
                  android:textSize="30sp" />
                <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:layout_marginTop="15dp"
                android:background="#00000000"/>
                
                
                  <Button
                android:id="@+id/button30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/i"
                android:text="@string/el2" 
                android:textColor="#FCCA03"
                android:textSize="20sp"
                />
                <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:layout_marginTop="7dp"
                android:background="#00000000"/>
                 <Button
                android:id="@+id/button31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/i"
                android:text="@string/el3" 
                android:textColor="#FCCA03"
                android:textSize="20sp"
                />
                <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:layout_marginTop="7dp"
                android:background="#00000000"/>
                 <Button
                android:id="@+id/button32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/i"
                android:text="@string/cs1" 
                android:textColor="#FCCA03"
                android:textSize="20sp"
                />
                <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:layout_marginTop="7dp"
                android:background="#00000000"/>
                 <Button
                android:id="@+id/button33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/i"
                android:text="@string/cs2" 
                android:textColor="#FCCA03"
                android:textSize="20sp"
                />
                <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:layout_marginTop="7dp"
                android:background="#00000000"/>
                 <Button
                android:id="@+id/button34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/i"
                android:text="@string/cs3" 
                android:textColor="#FCCA03"
                android:textSize="20sp"
                />
                <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:layout_marginTop="7dp"
                android:background="#00000000"/>
                 <Button
                android:id="@+id/button35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/i"
                android:text="@string/cs4" 
                android:textColor="#FCCA03"
                android:textSize="20sp"
                />
                <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:layout_marginTop="35dp"
                android:background="#00000000"/>
 
   </LinearLayout>
    </ScrollView>

</RelativeLayout>